Migrate operational modules to tenant v1 API
